--- a/src/app/pages/home/components/navbar/navbar.component.html
+++ b/src/app/pages/home/components/navbar/navbar.component.html
@@ -12,6 +12,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/app/users">Users</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/app/tarefas">Tarefas</a>
+        </li>
       </ul>
       <form class="d-flex" role="search">
         <button class="btn btn-outline-danger" routerLink="/">Logout</button>
