Entidade para receber os valores  cadastro de usuario

--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -42,8 +42,8 @@
                     class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
                 </div>
 
-                <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="#!"
-                    class="fw-bold text-body"><u>Login here</u></a></p>
+                <p class="text-center text-muted mt-5 mb-0">Já possui uma conta? <a href="#!"
+                    class="fw-bold text-body"><u>Login aqui</u></a></p>
 
               </form>
 
