--- a/src/app/pages/tarefas/tarefas.component.html
+++ b/src/app/pages/tarefas/tarefas.component.html
@@ -1,30 +1,6 @@
-<table class="table table-striped table-dark">
-    <thead>
-      <tr>
-        <th scope="col">ID</th>
-        <th scope="col">Nome</th>
-        <th scope="col">Status</th>
-        
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-    
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-       
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-       
-      </tr>
-    </tbody>
-  </table>
+<ul>
+  <li *ngFor="let task of task" [ngStyle]="{ 'text-decoration': task.completo ? 'line-through' : 'none' }">
+    {{ task.description }}
+    <button (click)="botaoConcluir(task)">{{ task.completo ? 'Desconcluir' : 'Concluir' }}</button>
+  </li>
+</ul>
