--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,35 +3,37 @@
     <div class="row d-flex justify-content-center align-items-center vh-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
         <div class="card bg-dark text-white" style="border-radius: 1rem;">
-          <div class="card-body p-5 text-center">
+          <div class="card-body p-5">
 
             <div class="mb-md-5 mt-md-4 pb-5">
 
-              <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-              <p class="text-white-50 mb-5">Por favor, insira o seu email e senha</p>
+              <h2 class="fw-bold mb-2 text-uppercase text-center">Login</h2>
+              <p class="text-white-50 mb-5 text-center">Por favor, insira o seu email e senha</p>
 
-              <div class="form-outline form-white mb-4">
-                <input type="email" id="typeEmailX" class="form-control form-control-lg" [(ngModel)]="email" />
-                <label class="form-label" for="typeEmailX">Email</label>
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Email</label>
+                <input type="email" id="typeEmailX" class="form-control form-control-lg" [(ngModel)]="email" placeholder="Insira o E-mail">
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Senha</label>
+                <input type="password" id="typePasswordX" class="form-control form-control-lg" [(ngModel)]="password" placeholder="Insira a senha"/>
               </div>
 
-              <div class="form-outline form-white mb-4">
-                <input type="password" id="typePasswordX" class="form-control form-control-lg" [(ngModel)]="password"  />
-                <label class="form-label" for="typePasswordX">Senha</label>
+              <div class="d-flex justify-content-center pt-3">
+                <button class="btn btn-outline-light btn-lg px-5" (click)="login()">Login</button>
               </div>
+              
 
-              <button class="btn btn-outline-light btn-lg px-5" (click)="login()">Login</button>
-
-              <div class="d-flex justify-content-center text-center mt-4 pt-1">
+              <!-- <div class="d-flex justify-content-center text-center mt-4 pt-1">
                 <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
                 <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
                 <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
-              </div>
+              </div> -->
 
             </div>
 
             <div>
-              <p class="mb-0">Não possuí uma conta? <a routerLink="/cadastro" class="text-white-50 fw-bold">Cadastro</a>
+              <p class="mb-0 text-center">Não possuí uma conta? <a routerLink="/cadastro" class="text-white-50 fw-bold">Cadastro</a>
               </p>
             </div>
 
