--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -16,7 +16,7 @@
               </div>
               <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Senha</label>
-                <input type="password" id="typePasswordX" class="form-control form-control-lg" [(ngModel)]="password" placeholder="Insira a senha"/>
+                <input type="password" id="typePasswordX" class="form-control form-control-lg" [(ngModel)]="password" required (keydown.enter)="login()" placeholder="Insira a senha"/>
               </div>
 
               <div class="d-flex justify-content-center pt-3">
