Implementação de tarefas, botões e editar

--- a/src/app/pages/tarefas/tarefas.component.html
+++ b/src/app/pages/tarefas/tarefas.component.html
@@ -1,20 +1,35 @@
 <table class="table">
   <thead>
     <tr>
-      <th scope="col">Descrição</th>
-      <th scope="col">Status</th>
-      <th scope="col">Ação</th>
+      <th scope="col" class="coluna-tabela">Descrição</th>
+      <th scope="col" class="coluna-tabela">Status</th>
+      <th scope="col" class="coluna-tabela">Ação</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let task of task" [ngClass]="{'table-success': task.completo}">
-      <td>{{ task.description }}</td>
-      <td>{{ task.completo ? 'Concluída' : 'Não concluída' }}</td>
+    <tr *ngFor="let task of task" [ngClass]="{'table-warning': task.status === 'Realizando', 'table-success': task.status === 'Concluída'}">
       <td>
-        <button class="btn btn-primary" (click)="botaoConcluir(task)">
-          {{ task.completo ? 'Desconcluir' : 'Concluir' }}
+        <div class="descricao-tarefa">
+          <span *ngIf="!task.editing">{{ task.description }}</span>
+        </div>
+        
+        <input type="text" class="form-control input-editar" *ngIf="task.editing" [(ngModel)]="task.description" (keyup.enter)="salvarEdicao(task)">
+      </td>
+      <td>
+        <div class="status" >
+          <span>{{ task.status }}</span>
+        </div>
+      </td>
+      <td>
+        <button class="btn btn-primary" style="width:110px;" [ngClass]="{'botao-verde': task.status === 'Concluída', 'botao-laranja':task.status === 'Realizando'}" (click)="botaoConcluir(task)">
+          {{ task.status === 'Não concluída' ? 'Iniciar' : task.status === 'Realizando' ? 'Realizando' : 'Concluída' }}
+        </button>
+        <span style=" margin-left: 5px; margin-right: 5px;"></span>
+        <button class="btn btn-info " style="width:110px;" (click)="editarTarefa(task)">
+          {{ task.editing ? 'Salvar' : 'Editar' }}
         </button>
       </td>
     </tr>
   </tbody>
 </table>
+ 
