--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
-<section class="vh-100 gradient-custom">
-  <div class="container py-5 vh-100">
-    <div class="row d-flex justify-content-center align-items-center vh-100">
+<section class="gradient-custom">
+  <div class="container py-5 ">
+    <div class="row d-flex justify-content-center align-items-center ">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
         <div class="card bg-dark text-white" style="border-radius: 1rem;">
           <div class="card-body p-5">
